[add] image, body

--- a/sample.html
+++ b/sample.html
@@ -15,7 +15,47 @@
 
 
 <body>
-    <h1>ぶうおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおん</h1>
+    <div class="header">
+        <div class="header-inner">
+            <a class="header-logo" href="index.html">
+                <img src="images/logo.png" alt="ロゴ">
+            </a>
+            <button class="toggle-menu-button"></button>
+            <nav class="site-menu">
+                <ul>
+                    <li>コンセプト</li>
+                    <li>メンバー</li>
+                    <li>アクセス</li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="main">
+        <h1>ぶうおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおん</h1>
+    </div>
+    <div class="footer">
+        <div class="footer-inner">
+            <div class="footer-logo">
+                <img src="images/logo.png" alt="ロゴ">
+            </div>
+            <div class="footer-text">
+                <img src="images/bobobo.jpg" alt="はじけろ！">
+                <nav class="site-menu">
+                    <ul>
+                        <li>コンセプト</li>
+                        <li>メンバー</li>
+                        <li>アクセス</li>
+                    </ul>
+                </nav>
+                <a class="footer-logo" href="index.html">
+                    <img src="images/logo_footer.png" alt="ロゴ">
+                </a>
+                <p class="copyright">
+                    <small>&copy;名城大学情報工学部ハジケリスト同好会</small>
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
