--- a/sample.html
+++ b/sample.html
@@ -14,7 +14,8 @@
 </head>
 
 
-<body>
+<body style="background-image: url(images/bobobo.jpg);">
+    <!-- ヘッダー -->
     <div class="header">
         <div class="header-inner">
             <a class="header-logo" href="index.html">
@@ -30,10 +31,14 @@
             </nav>
         </div>
     </div>
+
+    <!-- メイン部分 -->
     <div class="main">
         <h1>ぶうおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおん</h1>
     </div>
-    <div class="footer">
+
+    <!-- フッター -->
+    <div class="footer" style="background-color:chocolate">
         <div class="footer-inner">
             <div class="footer-logo">
                 <img src="images/logo.png" alt="ロゴ">
