--- a/sample.html
+++ b/sample.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<body style="background-image: url(images/bobobo.jpg);">
+<body >
     <!-- ヘッダー -->
     <div class="header">
         <div class="header-inner">
@@ -38,7 +38,7 @@
     </div>
 
     <!-- フッター -->
-    <div class="footer" style="background-color:chocolate">
+    <div class="footer" >
         <div class="footer-inner">
             <img src="images/bobobo.jpg" alt="はじけろ！">
             <nav class="site-menu">
