--- a/sample.html
+++ b/sample.html
@@ -9,7 +9,9 @@
     <meta name="description" content="名城大学情報工学部の非公式HPです">
     <script src="js/toggle-menu.js"></script>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 
 </head>
 
