--- a/sample.html
+++ b/sample.html
@@ -29,6 +29,8 @@
                     <li>コンセプト</li>
                     <li>メンバー</li>
                     <li>アクセス</li>
+                    <li>お問い合わせ</li>
+                    <li>ハジケ</li>
                 </ul>
             </nav>
         </div>
