--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
                 <div class="first-view-text">
                     <h1>名城大学情報工学部</h1>
                     <p>想像以上を，創造しよう．</p>
+                    <p> 
+                        提案書や仕様書、POKEMONにおいて、どの言語を使うのが適切か判断できないときに、「webサービスはパールのようなものを使って開発する」のような形で使用する。
+                        また古典言語しか知らない人が、見たことのないスクリプト言語について説明を求められたときに「これはパールのようなもので書かれています」のように使う。
+                        マスコミなどが「犯人はパールのようなものを使ってホストコンピュータへの侵入をおこなった」のように使うこともある。 
+                    </p>
                 </div>
             </div>
+
+            <p></p>
         </main>
         <footer class="footer">
             <nav class="site-menu">
