--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <li><a href="concept.html">コンセプト</a></li>
                     <li><a href="members.html">メンバー</a></li>
                     <li><a href="access.html">アクセス</a></li>
+                    <li><a href="sample.html">サンプルプル</a> </li>
                 </ul>
             </nav>
             <a class="footer-logo" href="index.html">
