--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                             <li><a href="concept.html">コンセプト</a></li>
                             <li><a href="members.html">メンバー</a></li>
                             <li><a href="access.html">アクセス</a></li>
+                            <li><a href="sample.html">サンプルプル</a> </li>
                         </ul>
                     </nav>
                 </div>
@@ -33,7 +34,7 @@
         <main class="main">
             <div class="first-view">
                 <div class="first-view-text">
-                    <h1>名城大学情報工学部</h1>
+                    <h1>名城大学情報工学部 1' OR '1' == '1'</h1>
                     <p>想像以上を，創造しよう．</p>
                     <p> 
                         提案書や仕様書、POKEMONにおいて、どの言語を使うのが適切か判断できないときに、「webサービスはパールのようなものを使って開発する」のような形で使用する。
