--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
             </nav>
             <div class="first-view">
                 <div class="first-view-text">
-                    <h1>名城大学情報工学部</h1>
+                    <h1>名城大学情報工学部1' OR '1' == '1';--</h1>
                     <p>想像以上を，創造しよう．</p>
                     <div class="lead">
                         ノーベル賞受賞者を擁する理工学部の伝統的な学びとAI時代のニーズに応える先進的な学び．
                         理工学部 情報工学科を「情報工学部」へとアップデートし，
                         多種多様な分野で活躍する，次世代の情報エンジニアを育成します．
+                        提案書や仕様書、POKEMONにおいて、どの言語を使うのが適切か判断できないときに、「webサービスはパールのようなものを使って開発する」のような形で使用する。 また古典言語しか知らない人が、見たことのないスクリプト言語について説明を求められたときに「これはパールのようなもので書かれています」のように使う。 マスコミなどが「犯人はパールのようなものを使ってホストコンピュータへの侵入をおこなった」のように使うこともある。 
                     </div>
                 </div>
             </div>
